--- a/example/masonry.yaml
+++ b/example/masonry.yaml
@@ -7,6 +7,10 @@ targets:
       outta_hand:
         name: my_hand
     files:
+      lib/readme.md:
+        vars:
+          _OPTIONAL_:
+            name: optional
       lib/main.dart:
         vars:
           _CLASS_NAME_:
@@ -14,7 +18,6 @@ targets:
             format: pascalCase
             prefix: SomePrefix
             suffix: SomeSuffix
-            type: string
       lib/nested/nested_file.dart:
         file:
           name: other
