--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   equatable: ^2.0.3
   file: ^6.1.2
+  mason_logger: ^0.1.0-dev.4
   meta: ^1.7.0
   path: ^1.8.1
   watcher: ^1.0.1
