--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,11 +8,13 @@ environment:
   sdk: '>=2.15.1 <3.0.0'
 
 dependencies:
+  args: ^2.3.0
   equatable: ^2.0.3
   file: ^6.1.2
   mason_logger: ^0.1.0-dev.4
   meta: ^1.7.0
   path: ^1.8.1
+  pub_updater: ^0.2.2
   watcher: ^1.0.1
   yaml: ^3.1.0
 
