--- a/derry.yaml
+++ b/derry.yaml
@@ -11,5 +11,5 @@ upload_coverage:
 
 runtests:
   - rm -rf coverage
-  - dart run test --coverage coverage -r expanded --test-randomize-ordering-seed random --timeout 60s
+  - dart run test -j 1 --coverage coverage -r expanded --test-randomize-ordering-seed random --timeout 60s
   - $coverage
