--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -3,3 +3,4 @@ include: package:very_good_analysis/analysis_options.yaml
 analyzer:
   errors:
     unused_element: ignore
+    directives_ordering: ignore
