--- a/derry.yaml
+++ b/derry.yaml
@@ -13,3 +13,8 @@ runtests:
   - rm -rf coverage
   - dart run test -j 1 --coverage coverage -r expanded --test-randomize-ordering-seed random --timeout 60s
   - $coverage
+
+prep:
+  - dart analyze lib test
+  - dart format lib test
+  - dart pub global run import_sorter:main
