refactor: update config

--- a/brick_oven.yaml
+++ b/brick_oven.yaml
@@ -11,21 +11,16 @@ bricks:
         name:
       lib/readme.md:
         vars:
-          optional:
-            placeholder: _OPTIONAL_
+          optional: _OPTIONAL_
       lib/main.dart:
         vars:
-          masonry:
-            placeholder: _CLASS_NAME_
-            format: pascalCase
-            prefix: some_prefix_
-            suffix: _some_suffix
+          masonry: _CLASS_NAME_
         name: my_main
       lib/nested/nested_file.dart:
         name:
           value: other
-          prefix: some_prefix_
-          suffix: _some_suffix
+          prefix: prefix_
+          suffix: _suffix
       lib/nested/nested_file.g.dart:
         name:
           value: other_generated
@@ -44,9 +39,7 @@ bricks:
       super_nested/outta_hand/outta_hand_file.dart:
         name:
           value: other
-          prefix: some_prefix_
-          suffix: _some_suffix
+          prefix: prefix_
+          suffix: _suffix
         vars:
-          something:
-            placeholder: otta hand
-            format: pascalCase
+          something: otta hand
