--- a/derry.yaml
+++ b/derry.yaml
@@ -1,5 +1,5 @@
 coverage:
-  - format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
+  - format_coverage --lcov --check-ignore --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
   - genhtml coverage/lcov.info -o coverage
   - open coverage/index.html
   - curl -Os https://uploader.codecov.io/latest/macos/codecov
