--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,22 +8,22 @@ environment:
   sdk: '>=2.15.1 <3.0.0'
 
 dependencies:
-  args: ^2.3.0
-  equatable: ^2.0.3
-  file: ^6.1.2
-  mason_logger: ^0.1.0-dev.5
-  meta: ^1.7.0
-  path: ^1.8.1
+  args: ^2.3.1
+  equatable: ^2.0.5
+  file: ^6.1.4
+  mason_logger: ^0.2.2
+  meta: ^1.8.0
+  path: ^1.8.2
   pub_updater: ^0.2.2
-  watcher: ^1.0.1
-  yaml: ^3.1.0
+  watcher: ^1.0.2
+  yaml: ^3.1.1
 
 dev_dependencies:
   derry: ^1.4.3
   mocktail: ^0.3.0
-  test: ^1.20.1
+  test: ^1.22.0
   universal_io: ^2.0.4
-  very_good_analysis: ^2.4.0
+  very_good_analysis: ^3.1.0
 
 executables:
   brick_oven: brick_oven
