--- a/derry.yaml
+++ b/derry.yaml
@@ -10,6 +10,10 @@ upload_coverage:
   - coverageKey=$(cat .codecov_secret); ./codecov -t "$coverageKey"
 
 test:
+  only:
+  - dart run test -j 1 -r expanded --test-randomize-ordering-seed random --timeout 60s
+
+  coverage:
   - rm -rf coverage
   - dart run test -j 1 --coverage coverage -r expanded --test-randomize-ordering-seed random --timeout 60s
   - $coverage
