--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 
 dependencies:
   args: ^2.3.1
+  autoequal: ^0.5.0
   equatable: ^2.0.5
   file: ^6.1.4
   mason_logger: ^0.2.2
@@ -19,6 +20,8 @@ dependencies:
   yaml: ^3.1.1
 
 dev_dependencies:
+  autoequal_gen: ^0.5.0
+  build_runner: ^2.3.2
   derry: ^1.4.3
   mocktail: ^0.3.0
   test: ^1.22.0
