--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,12 +16,14 @@ dependencies:
   meta: ^1.8.0
   path: ^1.8.2
   pub_updater: ^0.2.2
+  usage: ^4.1.0
   watcher: ^1.0.2
   yaml: ^3.1.1
 
 dev_dependencies:
   autoequal_gen: ^0.5.0
   build_runner: ^2.3.2
+  build_version: ^2.1.1
   derry: ^1.4.3
   mocktail: ^0.3.0
   test: ^1.22.0
