--- a/test/e2e/sources/hooks/brick_oven.yaml
+++ b/test/e2e/sources/hooks/brick_oven.yaml
@@ -3,6 +3,6 @@ bricks:
     source: oven
     brick_config: brick.yaml
     files:
-      hooks.yaml:
+      hooks.md:
         vars:
           name: _NAME_
