--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dev_dependencies:
   test: ^1.22.0
   universal_io: ^2.0.4
   very_good_analysis: ^3.1.0
+  very_good_cli: ^0.8.5
 
 executables:
   brick_oven: brick_oven
