--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,31 +5,32 @@ homepage: https://github.com/mrgnhnt96/brick_oven
 repository: https://github.com/mrgnhnt96/brick_oven
 
 environment:
-  sdk: '>=2.15.1 <3.0.0'
+  sdk: '>=2.19.0 <3.0.0'
 
 dependencies:
-  args: ^2.3.1
-  autoequal: ^0.5.0
+  args: ^2.4.0
+  autoequal: ^0.5.1
   equatable: ^2.0.5
   file: ^6.1.4
-  mason_logger: ^0.2.2
-  meta: ^1.8.0
-  path: ^1.8.2
-  pub_updater: ^0.2.2
+  mason_logger: ^0.2.5
+  meta: ^1.9.0
+  path: ^1.8.3
+  pub_updater: ^0.2.4
   usage: ^4.1.0
   watcher: ^1.0.2
   yaml: ^3.1.1
 
 dev_dependencies:
-  autoequal_gen: ^0.5.0
+  autoequal_gen: ^0.5.1
   build_runner: ^2.3.2
   build_version: ^2.1.1
-  derry: ^1.4.3
+  derry: ^1.5.0
+  mason: ^0.1.0-dev.41
   mocktail: ^0.3.0
   test: ^1.22.0
   universal_io: ^2.0.4
-  very_good_analysis: ^3.1.0
-  very_good_cli: ^0.8.5
+  very_good_analysis: ^4.0.0+1
+  very_good_cli: ^0.11.0+1
 
 executables:
   brick_oven: brick_oven
