--- a/test/e2e/sources/flavors/brick_oven.yaml
+++ b/test/e2e/sources/flavors/brick_oven.yaml
@@ -9,7 +9,7 @@ bricks:
           section: flavors
           prefix: main_
         vars:
-          flavors: _FLAVORS_
+          _FLAVORS_: flavors
       README.md:
         vars:
-          flavors: _FLAVORS_
+          _FLAVORS_: flavors
