--- a/test/e2e/sources/hello_world/brick_oven.yaml
+++ b/test/e2e/sources/hello_world/brick_oven.yaml
@@ -5,9 +5,9 @@ bricks:
     files:
       HELLO.md:
         vars:
-          name: _NAME_
+          _NAME_: name
     partials:
       common_footer.md:
       common_header.md:
         vars:
-          name: _NAME_
+          _NAME_: name
