--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,28 +9,28 @@ environment:
 
 dependencies:
   args: ^2.4.0
-  autoequal: ^0.5.1
+  autoequal: ^0.9.0
   equatable: ^2.0.5
   file: ^6.1.4
-  mason_logger: ^0.2.5
+  mason_logger: ^0.2.11
   meta: ^1.9.0
   path: ^1.8.3
-  pub_updater: ^0.2.4
+  pub_updater: ">=0.3.1 <0.5.0"
   usage: ^4.1.0
   watcher: ^1.0.2
   yaml: ^3.1.1
 
 dev_dependencies:
-  autoequal_gen: ^0.5.1
-  build_runner: ^2.3.2
+  autoequal_gen: ^0.9.0
+  build_runner: ^2.4.8
   build_version: ^2.1.1
   derry: ^1.5.0
   mason: ^0.1.0-dev.41
-  mocktail: ^0.3.0
+  mocktail: ^1.0.2
   test: ^1.22.0
-  universal_io: ^2.0.4
-  very_good_analysis: ^4.0.0+1
-  very_good_cli: ^0.11.0+1
+  universal_io: ^2.2.2
+  very_good_analysis: ^5.1.0
+  very_good_cli: ^0.19.1
 
 executables:
   brick_oven: brick_oven
