--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dev_dependencies:
   build_runner: ^2.4.8
   build_version: ^2.1.1
   derry: ^1.5.0
+  import_sorter: ^4.6.0
   mason: ^0.1.0-dev.41
   mocktail: ^1.0.2
   test: ^1.22.0
