--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   equatable: ^2.0.5
   file: ^6.1.4
   get_it: ^7.6.6
+  glob: ^2.1.2
   json_annotation: ^4.8.1
   mason_logger: ^0.2.11
   meta: ^1.9.0
