feat: create take 2

--- a/test/e2e/sources/flavors/brick_oven.yaml
+++ b/test/e2e/sources/flavors/brick_oven.yaml
@@ -5,7 +5,7 @@ bricks:
     files:
       main_flavor.dart:
         name:
-          value: . # could also be _INDEX_VALUE_
+          rename_with: . # could also be _INDEX_VALUE_
           section: flavors
           prefix: main_
         vars:
