--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "cSpell.words": ["datetime", "mocktail", "unawaited"]
+  "cSpell.words": ["datetime", "mocktail", "unawaited"],
+  "yaml.schemas": {
+    "./schema/brick_oven.yaml.schema.json": [
+        "brick_oven.yaml"
+    ],
+  }
 }
