--- a/derry.yaml
+++ b/derry.yaml
@@ -30,8 +30,8 @@ pub:
     - dart run very_good_cli:very_good packages get --recursive
 
 prep:
-  - dart analyze lib test
-  - dart format lib test
+  - dart analyze lib test/domain test/enums test/src test/test_utils test/utils
+  - dart format lib test/domain test/enums test/src test/test_utils test/utils
   - dart run import_sorter:main --ignore-config --no-comments
 
 install:
